Closed Bug 1394395 Opened 8 years ago Closed 8 years ago

"\include\mozilla/mscom/PassthruProxy.h(103): error C3646: 'mPreservedStream': unknown override specifier" with --disable-accessibility

Categories

(Core :: Disability Access APIs, defect)

defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla57
Tracking Status
firefox57 --- fixed

People

(Reporter: ryanvm, Assigned: bugzilla)

References

Details

Attachments

(1 file, 1 obsolete file)

c:\Users\Ryan\repos\mozilla\objdir-fx-64\dist\include\mozilla/mscom/PassthruProxy.h(103): error C3646: 'mPreservedStream': unknown override specifier c:\Users\Ryan\repos\mozilla\objdir-fx-64\dist\include\mozilla/mscom/PassthruProxy.h(103): error C4430: missing type specifier - int assumed. Note: C++ does not support default-int c:/Users/Ryan/repos/mozilla/ipc/mscom/PassthruProxy.cpp(37): error C2065: 'mPreservedStream': undeclared identifier c:/Users/Ryan/repos/mozilla/ipc/mscom/PassthruProxy.cpp(45): error C2065: 'mPreservedStream': undeclared identifier c:/Users/Ryan/repos/mozilla/ipc/mscom/PassthruProxy.cpp(45): error C2228: left of '.release' must have class/struct/union c:/Users/Ryan/repos/mozilla/ipc/mscom/PassthruProxy.cpp(45): note: type is 'unknown-type' c:/Users/Ryan/repos/mozilla/ipc/mscom/PassthruProxy.cpp(170): error C2065: 'mPreservedStream': undeclared identifier c:/Users/Ryan/repos/mozilla/ipc/mscom/PassthruProxy.cpp(174): error C2065: 'mPreservedStream': undeclared identifier c:/Users/Ryan/repos/mozilla/ipc/mscom/PassthruProxy.cpp(174): error C2227: left of '->Stat' must point to class/struct/union/generic type c:/Users/Ryan/repos/mozilla/ipc/mscom/PassthruProxy.cpp(174): note: type is 'unknown-type' c:/Users/Ryan/repos/mozilla/ipc/mscom/PassthruProxy.cpp(205): error C2065: 'mPreservedStream': undeclared identifier c:/Users/Ryan/repos/mozilla/ipc/mscom/PassthruProxy.cpp(228): error C2065: 'mPreservedStream': undeclared identifier c:/Users/Ryan/repos/mozilla/ipc/mscom/PassthruProxy.cpp(228): error C2227: left of '->Clone' must point to class/struct/union/generic type c:/Users/Ryan/repos/mozilla/ipc/mscom/PassthruProxy.cpp(228): note: type is 'unknown-type' c:/Users/Ryan/repos/mozilla/ipc/mscom/PassthruProxy.cpp(246): error C2065: 'mPreservedStream': undeclared identifier c:/Users/Ryan/repos/mozilla/ipc/mscom/PassthruProxy.cpp(298): error C2065: 'mPreservedStream': undeclared identifier c:/Users/Ryan/repos/mozilla/ipc/mscom/PassthruProxy.cpp(301): error C2065: 'mPreservedStream': undeclared identifier c:/Users/Ryan/repos/mozilla/ipc/mscom/Utils.cpp(266): error C2039: 'GetChromeMainThreadId': is not a member of 'mozilla::dom::ContentChild' c:\Users\Ryan\repos\mozilla\objdir-fx-64\dist\include\mozilla/dom/ContentChild.h(74): note: see declaration of 'mozilla::dom::ContentChild' c:/Users/Ryan/repos/mozilla/ipc/mscom/Utils.cpp(265): error C2789: 'parentMainTid': an object of const-qualified type must be initialized c:/Users/Ryan/repos/mozilla/ipc/mscom/Utils.cpp(265): note: see declaration of 'parentMainTid' mozmake.EXE[5]: *** [c:/Users/Ryan/repos/mozilla/config/rules.mk:1066: Unified_cpp_ipc_mscom0.obj] Error 2 mozmake.EXE[4]: *** [c:/Users/Ryan/repos/mozilla/config/recurse.mk:73: ipc/mscom/target] Error 2
Flags: needinfo?(aklotz)
Attached patch Patch (obsolete) — Splinter Review
Hey Ryan, can you give this patch a try and let me know if it works for you?
Assignee: nobody → aklotz
Status: NEW → ASSIGNED
Flags: needinfo?(aklotz) → needinfo?(ryanvm)
Comment on attachment 8901916 [details] [diff] [review] Patch It works!
Flags: needinfo?(ryanvm)
Attachment #8901916 - Flags: feedback+
Comment on attachment 8901916 [details] [diff] [review] Patch Cleanup patch to fix mscom build errors when accessibility is disabled.
Attachment #8901916 - Flags: review?(jmathies)
Can I lump in the new bustage from bug 1383501 here as well? ipc/mscom/ProxyStream.cpp(93): error C3481: 'strActCtx': lambda capture variable not found ipc/mscom/ProxyStream.cpp(112): error C2064: term does not evaluate to a function taking 0 arguments
Flags: needinfo?(aklotz)
Attachment #8901916 - Flags: review?(jmathies) → review+
Attached patch Revised patchSplinter Review
Yup, just revised the patch to include that as well.
Attachment #8901916 - Attachment is obsolete: true
Flags: needinfo?(aklotz)
Attachment #8902834 - Flags: review+
Pushed by ryanvm@gmail.com: https://hg.mozilla.org/integration/mozilla-inbound/rev/1c0baa92a5e8 Fix mscom build when ACCESSIBILITY is disabled. r=jimm
Keywords: checkin-needed
Status: ASSIGNED → RESOLVED
Closed: 8 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla57
(In reply to Pulsebot from comment #10) > Pushed by ryanvm@gmail.com: > https://hg.mozilla.org/integration/mozilla-inbound/rev/1c0baa92a5e8 > Fix mscom build when ACCESSIBILITY is disabled. r=jimm Thanks aklotz@mozilla.com for fixing!
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: