Bug 1394395 - Fix mscom build when ACCESSIBILITY is disabled. r=jimm

MozReview-Commit-ID: KmMTWR9FQcx